syntax = "proto3";

package com.datavault.common.grpc;
option java_package = "io.datavault.common.grpc";
option java_multiple_files = true;

service WorkerService {
  rpc StoreFile(StoreFileRequest) returns (StoreFileResponse);
  rpc RetrieveFile(RetrieveFileRequest) returns (RetrieveFileResponse);
}

service SchedulerService {
  rpc SendHeartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}


message HeartbeatRequest {
  string worker_id = 1;
  string address = 2;
}

message HeartbeatResponse {
  bool acknowledged = 1;
}

message StoreFileRequest {
  string worker_id = 1;  
  string file_id = 2;   
  bytes file_content = 3;  
}

message StoreFileResponse {
  bool success = 1;         
  string message = 2;      
}

message RetrieveFileRequest {
  string worker_id = 1;    
  string file_id = 2;     
}

message RetrieveFileResponse {
  bytes file_content = 1;  
  bool found = 2;        
}
